hphp/hack/test/typecheck/async_hint8.php.exp
File "async_hint8.php", line 4, characters 30-44:
`async` functions must have an `Awaitable` return type. (Parsing[1002])
