hphp/hack/test/typecheck/async_hint8.php
<?hh

// Testing function
async function right_hint(): ?Awaitable<int> {
  throw new Exception();
}
